--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
   # build the container image
-- name: "gcr.io/cloud-builders/docker"
+- name: "docker"
   args: ["build", "-t", "gcr.io/$PROJECT_ID/gcpdevops", "."]
   # push container image
 - name: "gcr.io/cloud-builders/docker"
